[metadata]
name = mox3
summary = Mock object framework for Python
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/mox3/latest/
python-requires = >=3.6
classifiers =
    Environment :: OpenStack
    Programming Language :: Python
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Testing

[files]
packages =
    mox3

[global]
setup-hooks =
    pbr.hooks.setup_hook
